--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/grey100</color>
+    <color name="colorPrimary">@color/white</color>
     <color name="colorPrimaryDark">@color/grey100Dark</color>
     <color name="colorAccent">@color/yellowA700</color>
 
     <color name="yellowA700Light">#ffff52</color>
     <color name="yellowA700">#ffd600</color>
-    <color name="grey100">#f5f5f5</color>
+    <color name="white">#ffffff</color>
     <color name="grey100Dark">#c2c2c2</color>
     <color name="grey800">#424242</color>
     <color name="grey800Dark">#1b1b1b</color>
