--- a/app/src/main/assets/kotlin.css
+++ b/app/src/main/assets/kotlin.css
@@ -1,12 +1,39 @@
+/**
+ *
+ * Copyright 2020 David Odari
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
+ * in compliance with the License. You may obtain a copy of the License at
+ *            http://www.apache.org/licenses/LICENSE-2.0
+ * Unless required by applicable law or agreed to in writing, software distributed under the License
+ * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing permissions and limitations under
+ * the License.
+ *
+ **/
 @charset "utf-8";
 
 body {
     font-family: Helvetica, Arial, Freesans, clean, sans-serif;
-    font-size:1.4em
-    padding:1em;
+    font-size:1.2em;
+    padding:0.5em;
     margin:auto;
     max-width:42em;
-    background:#fefefe;
+    background:#eeeeee;
+}
+code, pre {
+    background-color: #F8F8F8;
+    color: inherit;
+}
+pre {
+    line-height: 1.25em;
+    overflow: auto;
+    padding: 6px 10px;
+}
+pre > code {
+    border: 0;
+    margin: 0;
+    padding: 0;
 }
 code {
     margin: 0 2px;
@@ -32,4 +59,16 @@ code {
 }
 .comments{
     color:#9e9e9e;
+}
+.assertions{
+    color:#d50000;
+}
+.stdlib{
+    color:#6a1b9a;
+}
+.literals{
+    color:#1E90FF;
+}
+.static{
+    color:#6a1b9a;
 }
