batch update on css styling

--- a/app/src/main/res/layout/activity_design_pattern_detail.xml
+++ b/app/src/main/res/layout/activity_design_pattern_detail.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_default"
-        android:text="@string/code_sample"
+        android:text="@string/title_code_sample"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
     <us.feras.mdv.MarkdownView
