--- a/app/src/main/res/layout/activity_design_pattern_detail.xml
+++ b/app/src/main/res/layout/activity_design_pattern_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DesignPatternDetailActivity">
+    tools:context=".ui.DesignPatternDetailActivity">
 
     <TextView
         android:id="@+id/design_pattern_description_text_view"
