--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -31,14 +31,14 @@
             android:text="@string/app_name"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-            android:textColor="@color/grey800Dark" />
+            android:textColor="@color/colorTitle" />
 
         <TextView
             android:id="@+id/app_version_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:textColor="@color/grey800"
+            android:textColor="@color/colorSubtitle"
             tools:text="v1.0.0" />
 
         <TextView
@@ -60,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/small_margin"
+        android:textColor="@color/colorTitle"
         android:text="@string/libraries"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
