--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,7 +3,7 @@
     <string-array name="theme_options_above_q">
         <item>Light Theme</item>
         <item>Dark Theme</item>
-        <item>System Default</item>
+        <item>Follow System</item>
     </string-array>
 
     <string-array name="theme_options_below_q">
